--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@
 }
 
 #map{
-    bottom: 2px;
-    min-width: 1024px;
-    position: absolute;
+    /* Basic settings of map div */
+    position: relative;
     top: 0;
-    width: 99%;
+    width: 100%;
     height:100%;
+}
+
+input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 100%;
 }
